[tool.poetry]
name = "reservoirdb_protocol"
version = "0.1.0"
description = ""
authors = [ "Ruan Pearce-Authers <ruan@reservoirdb.com>" ]

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
mypy = "^0.800"

[build-system]
requires = [ "poetry-core >= 1.0.0" ]
build-backend = "poetry.core.masonry.api"
